2001-08-10 Friday 15:25  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.38), include/thai/thcell.h (1.5),
	src/thcell/thcell.c (1.5): Allow null pointer to struct thcell_t to
	be passed in th_next_cell() and th_prev_cell(), where no cell data
	will be written back.

2001-08-09 Thursday 20:33  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.37), tests/test_thcell.c (1.4), tests/test_thstr.c
	(1.3): Add header comments.

2001-08-09 Thursday 20:27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.35), tests/Makefile.am (1.9), ChangeLog (1.36),
	tests/test_thinp.c (1.1): Add thinp test suite.

2001-08-09 Thursday 18:52  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.34), include/thai/thcell.h (1.4),
	src/thcell/thcell.c (1.4), src/thrend/thrend.c (1.7),
	tests/test_thcell.c (1.3): Change return types and arguments of
	thcell functions to reduce information redundancy.

2001-08-09 Thursday 18:13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.33), tests/test_thcell.c (1.2): Add
	test_th_make_cells().

2001-08-09 Thursday 17:55  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.32), tests/Makefile.am (1.8), tests/test_thcell.c
	(1.1): Add thcell test suite.

2001-08-09 Thursday 00:57  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.31), include/thai/thcell.h (1.3),
	include/thai/thinp.h (1.8), include/thai/thrend.h (1.7),
	src/thcell/thcell.c (1.3), src/thinp/thinp.c (1.6),
	src/thrend/thrend.c (1.6): Rename struct thcell to struct thcell_t,
	for naming consistency.

2001-08-09 Thursday 00:52  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.30), include/thai/thinp.h (1.7), src/thinp/thinp.c
	(1.5): Change th_validate() to use a cell as context. Define struct
	thinpconv_t for describing input buffer conversion.

2001-08-08 Wednesday 20:58  Theppitak Karoonboonyanan  <thep@linux.thai.net>
