@@ -1,3 +1,12 @@
+2001-08-10 Friday 18:07  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* ChangeLog (1.39), include/thai/thrend.h (1.8),
+	src/thrend/thrend.c (1.8), tests/Makefile.am (1.10),
+	tests/test_thrend.c (1.1): Add test suite for thrend. Fix bugs in
+	thrend: th_chlevel() typo; treat NIKHAHIT and MAITAIKHU with
+	shift_left_tone_ad() in th_render_cell(); also shift top-level
+	character left when collapsed with NIKHAHIT split from SARA_AM.
+
 2001-08-10 Friday 15:25  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* ChangeLog (1.38), include/thai/thcell.h (1.5),
@@ -496,13 +505,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am (1.2),
 	src/thcoll/Makefile.am (1.2, r0_1_0), tests/Makefile.am (1.2): Add
-	$Id: ChangeLog,v 1.39 2001-08-10 11:07:30 thep Exp $
+	$Id: ChangeLog,v 1.40 2001-08-10 11:09:47 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_0), tests/thsort.c (1.2, r0_1_0): Add $Id: ChangeLog,v 1.39 2001-08-10 11:07:30 thep Exp $
+	r0_1_0), tests/thsort.c (1.2, r0_1_0): Add $Id: ChangeLog,v 1.40 2001-08-10 11:09:47 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
